<resources>
    <string name="app_name">FoodOrdering</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="option_get_place">Get place</string>
    <string name="option_go_back">Go Back</string>
    <string name="default_info_title">Default Location</string>
    <string name="pick_place">Choose a place</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="textview">TextView</string>
    <string name="_0">0</string>
    <string name="order">Order</string>
    <string name="facebook_app_id">151575755537322</string>
    <string name="fb_login_protocol_scheme">fb151575755537322</string>
    <string name="order_detail">Order Detail</string>
    <string name="order_status">Order Status:</string>
    <string name="order_id">Order ID:</string>
    <string name="order_date">Order Date:</string>
    <string name="order_name">Order Name:</string>
    <string name="total_order">Total Order:</string>
    <string name="order_deliver_address">Order Deliver Address:</string>
    <string name="order_quantity">Order Quantity:</string>
    <string name="track_information">Track Information:</string>
</resources>
